more spacing fix2

--- a/script/styles.css
+++ b/script/styles.css
@@ -184,6 +184,14 @@
     margin-left: 1vw; 
 }
 
+.textBlockR {
+    display:grid;
+    grid-template-columns: repeat(5,1fr);
+    grid-template-rows: repeat(2,1fr);
+    column-gap: 2.5vw;
+    row-gap:0.5vh;
+}
+
 #pluh {
     display:grid;
     grid-auto-rows: min-content;
